--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap">
         <!-- Press Start 2P -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     </head>
     <body>
         <div class="un_topAnimation js_topAnimation">
             <div class="un_topAnimation_bg js_topAnimation_bg"></div>
-            <h1 class="el_ttl js_ttl"></h1>
+            <h1 class="un_topAnimation_ttl js_topAnimation_ttl"></h1>
+        </div>
+        <div class="body_inner ly_body_inner">
+            <h1 class="ttl ly_ttl">operating system</h1>
+            <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
+            <div class="bl_sns_wrapper ly_sns_wrapper">
+                <a class="el_sns" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+                <a class="el_sns" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
+                <a class="el_sns" target="_blank" href="https://github.com/atsumarukun"><i class="fab fa-github"></i></a>
+            </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
