Create change coloer function.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 class="un_topAnimation_ttl js_topAnimation_ttl"></h1>
         </div>
         <div class="body_inner ly_body_inner">
+            <button class="el_colorButton" onclick="changeColor()">●</button>
             <h1 class="ttl ly_ttl">operating system</h1>
             <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
             <div class="bl_sns_wrapper ly_sns_wrapper">
@@ -31,5 +32,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
         <script src="./scripts/start_animation.js"></script>
+        <script src="./scripts/actions.js"></script>
     </body>
 </html>
