Create background animation.

--- a/index.html
+++ b/index.html
@@ -19,19 +19,24 @@
             <div class="un_topAnimation_bg js_topAnimation_bg"></div>
             <h1 class="un_topAnimation_ttl js_topAnimation_ttl"></h1>
         </div>
-        <div class="body_inner ly_body_inner">
-            <button class="el_colorButton" onclick="changeColor()">●</button>
-            <h1 class="ttl ly_ttl">operating system</h1>
-            <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
-            <div class="bl_sns_wrapper ly_sns_wrapper">
-                <a class="el_sns" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="el_sns" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
-                <a class="el_sns" target="_blank" href="https://github.com/atsumarukun"><i class="fab fa-github"></i></a>
-            </div>
+        <div class="js_animationContainer"></div>
+        <button class="el_colorButton ly_colorButton" onclick="changeColor()">●</button>
+        <h1 class="ttl ly_ttl">operating system</h1>
+        <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
+        <div class="bl_sns_wrapper ly_sns_wrapper">
+            <a class="el_sns" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+            <a class="el_sns" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
+            <a class="el_sns" target="_blank" href="https://github.com/atsumarukun"><i class="fab fa-github"></i></a>
         </div>
+        <!-- GSAP -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+        <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+        <!-- Three -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
         <script src="./scripts/start_animation.js"></script>
+        <script src="./scripts/back_animation.js"></script>
         <script src="./scripts/actions.js"></script>
     </body>
 </html>
