--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
             <h1 class="un_topAnimation_ttl js_topAnimation_ttl"></h1>
         </div>
         <div class="js_animationContainer"></div>
-        <button class="el_colorButton ly_colorButton" onclick="changeColor()">●</button>
         <h1 class="ttl ly_ttl">operating system</h1>
         <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
-        <div class="bl_sns_wrapper ly_sns_wrapper">
-            <a class="el_sns" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="el_sns" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
-            <a class="el_sns" target="_blank" href="https://github.com/atsumarukun"><i class="fab fa-github"></i></a>
+        <div class="bl_menue_wrapper ly_menue_wrapper">
+            <button class="el_menue"><i class="fas fa-folder"></i></button>
+            <button class="el_menue" onclick="changeColor()"><i class="fas fa-palette"></i></button>
+            <a class="el_menue" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+            <a class="el_menue" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
+            <a class="el_menue" target="_blank" href="https://github.com/atsumarukun"><i class="fab fa-github"></i></a>
         </div>
         <!-- GSAP -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
