Add definitions and load this.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- Three -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
+        <script src="./scripts/definitions.js"></script>
         <script src="./scripts/start_animation.js"></script>
         <script src="./scripts/back_animation.js"></script>
         <script src="./scripts/actions.js"></script>
