Create about window body.

--- a/index.html
+++ b/index.html
@@ -59,14 +59,20 @@
     <!-- Threejs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
-    <script src="./scripts/definitions.js"></script>
-    <script src="./scripts/start_animation.js"></script>
-    <script src="./scripts/back_animation.js"></script>
-    <script src="./scripts/actions.js"></script>
-    <script src="./scripts/window.js"></script>
-    <script src="./scripts/components/Window.js"></script>
-    <script src="./scripts/components/WindowBody.js"></script>
-    <script src="./scripts/components/SnsWindowBody.js"></script>
-    <script src="./scripts/components/AboutWindowBody.js"></script>
+    <script src="./scripts/definitions.js" charset="UTF-8"></script>
+    <script src="./scripts/start_animation.js" charset="UTF-8"></script>
+    <script src="./scripts/back_animation.js" charset="UTF-8"></script>
+    <script src="./scripts/actions.js" charset="UTF-8"></script>
+    <script src="./scripts/window.js" charset="UTF-8"></script>
+    <script src="./scripts/components/Window.js" charset="UTF-8"></script>
+    <script src="./scripts/components/WindowBody.js" charset="UTF-8"></script>
+    <script
+      src="./scripts/components/SnsWindowBody.js"
+      charset="UTF-8"
+    ></script>
+    <script
+      src="./scripts/components/AboutWindowBody.js"
+      charset="UTF-8"
+    ></script>
   </body>
 </html>
