--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     <h1 class="ttl ly_ttl">operating system</h1>
     <h2 class="sub_ttl ly_sub_ttl">I'm atsumarukun.</h2>
     <div class="bl_menu ly_menu">
-      <button class="ly_menuItem el_menuItem" onclick="createWindow()">
+      <button class="el_menuItem" onclick="createWindow()">
         <i class="fas fa-folder"></i>
       </button>
-      <button class="ly_menuItem el_menuItem" onclick="changeColor()">
+      <button class="el_menuItem" onclick="changeColor()">
         <i class="fas fa-palette"></i>
       </button>
-      <a class="ly_menuItem el_menuItem" target="_blank" href="#"
+      <a class="el_menuItem" target="_blank" href="#"
         ><i class="fab fa-twitter"></i
       ></a>
-      <a class="ly_menuItem el_menuItem" target="_blank" href="#"
+      <a class="el_menuItem" target="_blank" href="#"
         ><i class="fab fa-youtube"></i
       ></a>
       <a
-        class="ly_menuItem el_menuItem"
+        class="el_menuItem"
         target="_blank"
         href="https://github.com/atsumarukun"
         ><i class="fab fa-github"></i
