--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="ja">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <title>ATSUMARUKUN</title>
     <link rel="stylecheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="./style.css" />
@@ -22,6 +22,21 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     />
+
+    <!-- OGP -->
+    <meta
+      property="og:url"
+      content="https://atsumarukun.github.io/portfolio/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ATSUMARUKUN" />
+    <meta property="og:description" content="Portfolio" />
+    <meta property="og:site_name" content="ATSUMARUKUN" />
+    <meta property="og:image" content="./public/ogp.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="atsumarukun_pc" />
   </head>
   <body>
     <div class="un_topAnimation js_topAnimation">
