--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <meta property="og:title" content="ATSUMARUKUN" />
     <meta property="og:description" content="Portfolio" />
     <meta property="og:site_name" content="ATSUMARUKUN" />
-    <meta property="og:image" content="./public/ogp.png" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/atsumarukun/portfolio/master/public/ogp.png"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
