--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
       <button class="el_menuItem" onclick="changeColor()">
         <i class="fas fa-palette"></i>
       </button>
-      <a class="el_menuItem" target="_blank" href="#"
+      <a
+        class="el_menuItem"
+        target="_blank"
+        href="https://twitter.com/atsumarukun_pc"
         ><i class="fab fa-twitter"></i
       ></a>
       <a class="el_menuItem" target="_blank" href="#"
