Create error window.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="./scripts/actions.js" charset="UTF-8"></script>
     <script src="./scripts/window.js" charset="UTF-8"></script>
     <script src="./scripts/components/Window.js" charset="UTF-8"></script>
+    <script src="./scripts/components/ErrorWindow.js" charset="UTF-8"></script>
     <script src="./scripts/components/WindowBody.js" charset="UTF-8"></script>
     <script
       src="./scripts/components/SnsWindowBody.js"
